--- a/audioConvEmail/src/app/components/home/home.component.html
+++ b/audioConvEmail/src/app/components/home/home.component.html
@@ -1,11 +1,27 @@
-<div>
+<!-- <nav class="navbar navbar-light" style="background-color: #e3f2fd;" >
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="btn btn-outline-primary" type="submit">Search</button>
+  <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+
+</nav> -->
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+  <!-- <form class="form-inline"> -->
+    <button class="btn btn-outline-primary" type="submit" routerLink="login">Login</button>
+    <button class="btn btn-outline-primary" type="submit" routerLink="signup">Sign in</button>
+  <!-- </form> -->
+</nav>
+<!-- <div>
   <div>
-    <h1>AudioConvText</h1>
-    <br />
-    <h1>ACT</h1>
-  </div>
-  <div>
+    <h1>Your Audio meetings to text</h1>
+  </div> -->
+  <!-- <div>
     <button class="btn recordBtn" routerLink="login"> Login </button>
     <button class="btn recordBtn ml-5" routerLink="signup"> Sign in </button>
   </div>
+</div> -->
+<div class="bg" style="width: 1500px; height: 1000px;">
+  
+<div class="blinking">
+  <p>Send Your Audio Meetings via Emails</p>
+</div>
 </div>
