--- a/audioConvEmail/src/app/components/home/home.component.css
+++ b/audioConvEmail/src/app/components/home/home.component.css
@@ -1,6 +1,48 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
 h1{
     font-size: 100px;
     /* font-weight: 900; */
-    font-family: 'Work Sans', sans-serif;
+    /* font-family: 'Work Sans', sans-serif; */
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 300;
+    font-size: 7em;
     text-align: center;
+}
+.bg{
+    height: 100px;
+}
+
+.blinking{
+    margin-left: 0%;
+    margin-top: 0%;
+    padding: 6.5%;
+    height: 1000px;
+    display: inline-block;
+    background: url("../../../../Images/bg.png");
+}
+
+p {
+    font-size: 4em;
+    font-family: 'Quicksand', sans-serif;
+    color: white;
+    border-right: 3px solid white;
+    overflow: hidden;
+    white-space: nowrap;
+    animation: typing 20s steps(50) forwards, blink-caret .6s step-end infinite;
+    animation-iteration-count: infinite;
+    /* padding: 1%; */
+    margin-top: 23%;
+}
+
+@keyframes blink-caret{
+    from, to {border-color: transparent;}
+    50% {border-color: white;}
+}
+
+@keyframes typing {
+    0% {width: 0%;}
+    30% {width: 100%;}
+    80% {width: 100%;}
+    90% {width: 0%;}
+    100% {width: 0%;}
 }
