--- a/audioConvEmail/src/app/components/home/home.component.html
+++ b/audioConvEmail/src/app/components/home/home.component.html
@@ -22,6 +22,6 @@
 <div class="bg" style="width: 1500px; height: 1000px;">
   
 <div class="blinking">
-  <p>Send Your Audio Meetings via Emails</p>
+  <p>Minuites of Meeeting via E-Mail</p>
 </div>
 </div>
